--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,7 @@ button:hover{
 }
 
 .container-0{
-    border: 2px solid red;
+    /* border: 2px solid red; */
     background-color: #f7f8fa;
     display: flex;
     justify-content: center;
@@ -330,7 +330,7 @@ cursor: pointer;
 
  /* CONTAINER 2 */
 .container-2{
-    grid-column: 2 / span 4;
+    grid-column: 2 / span 1;
     grid-row: 1 / span 8;
     display: flex;
   }
@@ -338,12 +338,12 @@ cursor: pointer;
     width: 30%;
     padding: 20px;
     margin: 20px;
-    border: 2px solid red;
+    /* border: 2px solid red; */
     display: flex;
     flex-direction: column;
   }
 .container-2-1-1{
-   border: 2px solid black;
+   /* border: 2px solid black; */
   }
 .container-2-1-2{
     display: flex;
@@ -352,12 +352,12 @@ cursor: pointer;
     align-items: center;
     padding: 20px;
     border: 2px solid black;
-    border-radius: 100%
+    border-radius: 50%
   }
 
 .container-2-2{
     width: 70%;
-    border: 2px solid blue;
+    /* border: 2px solid blue; */
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -369,10 +369,12 @@ cursor: pointer;
    align-items: center;
    width: 90%;
    justify-content: flex-start;
-   border: 2px solid saddlebrown;
+   /* border: 2px solid saddlebrown; */
   }
 .container-2 h4{
     padding: 0px 10px;
+    /* margin-top: -10px; */
+    /* margin-left: -10px; */
 }
 .hr-2-1{
     height: 2px;
@@ -397,7 +399,7 @@ cursor: pointer;
 
  /* CONTAINER 3 */
 .container-3{
-    grid-column: 6 / span 4;
+    grid-column: 3 / span 8 ;
     grid-row: 1 / span 8;
     display: flex;
     width: 70%;
@@ -501,6 +503,7 @@ cursor: pointer;
     /* border: 2px solid blueviolet; */
     padding: 20px;
     border-radius: 8px;
+    cursor: pointer;
 }
 .container-4-2-odd{
     background-color: #f7f7f8b1;
